@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-05-26T01:27:06Z",
+  "timestamp" : "2022-05-26T16:24:46Z",
   "count_outdated" : 240,
   "uniques_outdated" : 51,
-  "count" : 358,
-  "uniques" : 63,
+  "count" : 364,
+  "uniques" : 64,
   "views" : [
     {
       "timestamp": "2022-05-16T00:00:00Z",
@@ -58,6 +58,13 @@
       "timestamp": "2022-05-24T00:00:00Z",
       "count": 2,
       "count_minmax": [ 2, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-05-26T00:00:00Z",
+      "count": 6,
+      "count_minmax": [ 6, 6 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
