@@ -1,6 +1,6 @@
 {
-  "count": 118,
-  "uniques": 10,
+  "count": 124,
+  "uniques": 11,
   "views": [
     {
       "timestamp": "2022-05-16T00:00:00Z",
@@ -40,6 +40,11 @@
     {
       "timestamp": "2022-05-24T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-05-26T00:00:00Z",
+      "count": 6,
       "uniques": 1
     }
   ]
