@@ -1,3 +1,10 @@
+2022-05-26T16:24:46Z:
+* notice: last 14d: unq all: 11 124
+* notice: prev accum: outdated-unq outdated-all / unq all: 51 240 / 63 358
+* notice: next accum: outdated-unq outdated-all / unq all: 51 240 / 64 364
+* notice: prev exec diff / last date diff / accum: unq all: +1 +6 -0 -0 / +1 +6 -0 -0 / 1 6
+* notice: changed dates: [2022-05-26]
+
 2022-05-26T01:27:06Z:
 * notice: last 14d: unq all: 10 118
 * notice: prev accum: outdated-unq outdated-all / unq all: 49 196 / 63 357
